--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla Weather App</title>
-    <link rel="stylesheet" href="src/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,11 +16,142 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/f8f59c13bc.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Sign up</a>
+      <div class="app-wrapper">
+        <div class="weather-app">
+          <h1>Enugu, Nigeria</h1>
+          <ul>
+            <li>Monday 12:00</li>
+            <li>Clear</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <img
+                src="images/weather-icon-png-11067.png"
+                class="weather-icon"
+                alt="weather icon"
+                width="60px"
+              />
+              <span class="float-left">12°C|°F</span>
+            </div>
+            <div class="col-2">
+              Wind
+              <br />
+              5km/h
+            </div>
+            <div class="col-2">
+              Humidity
+              <br />
+              73%
+            </div>
+            <div class="col-2">
+              precipitation
+              <br />
+              0%
+            </div>
+          </div>
+          <hr />
+          Today's forecast
+          <div class="row">
+            <div class="col-3">
+              Morning
+              <br />
+              25°
+              <br />
+              <i class="fa-solid fa-sun"></i>
+            </div>
+            <div class="col-3">
+              Afternoon
+              <br />
+              29°
+              <br />
+              <i class="fa-solid fa-cloud"></i>
+            </div>
+            <div class="col-3">
+              Evening
+              <br />
+              23°
+              <br />
+              <i class="fa-solid fa-cloud-moon"></i>
+            </div>
+            <div class="col-3">
+              Overnight
+              <br />
+              22°
+              <br />
+              <i class="fa-solid fa-cloud-rain"></i>
+            </div>
+          </div>
+          <hr />
+          Daily forecast
+          <div class="row">
+            <div class="col-2">
+              Sun
+              <br />
+              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <br />
+              12°
+              <br />
+              53°
+            </div>
+            <div class="col-2">
+              Mon
+              <br />
+              ⛅️
+              <br />
+              17°
+              <br />
+              62°
+            </div>
+            <div class="col-2">
+              Tue
+              <br />
+              ☀️
+              <br />
+              15°
+              <br />
+              59°
+            </div>
+            <div class="col-2">
+              Wed
+              <br />
+              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <br />
+              27°
+              <br />
+              80°
+            </div>
+            <div class="col-2">
+              Thur
+              <br />
+              <i class="fa-solid fa-smog"></i>
+              <br />
+              18°
+              <br />
+              64°
+            </div>
+            <div class="col-2">
+              Fri
+              <br />
+              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <br />
+              6°
+              <br />
+              28°
+            </div>
+          </div>
+          <small>
+            <a href="">Open-source code</a> by Onoh Jennifer Ukamaka
+          </small>
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
