Vanilla app CSS
I added styling to the weather app.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Monday 12:00</li>
             <li>Clear</li>
           </ul>
-          <div class="row">
+          <div class="row first">
             <div class="col-6">
               <img
                 src="images/weather-icon-png-11067.png"
@@ -39,7 +39,8 @@
                 alt="weather icon"
                 width="60px"
               />
-              <span class="float-left">12°C|°F</span>
+              <span class="temperature">12</span
+              ><span class="units">°C|°F</span>
             </div>
             <div class="col-2">
               Wind
@@ -65,28 +66,28 @@
               <br />
               25°
               <br />
-              <i class="fa-solid fa-sun"></i>
+              <i class="fa-solid fa-sun font-color"></i>
             </div>
             <div class="col-3">
               Afternoon
               <br />
               29°
               <br />
-              <i class="fa-solid fa-cloud"></i>
+              <i class="fa-solid fa-cloud font-color"></i>
             </div>
             <div class="col-3">
               Evening
               <br />
               23°
               <br />
-              <i class="fa-solid fa-cloud-moon"></i>
+              <i class="fa-solid fa-cloud-moon font-color"></i>
             </div>
             <div class="col-3">
               Overnight
               <br />
               22°
               <br />
-              <i class="fa-solid fa-cloud-rain"></i>
+              <i class="fa-solid fa-cloud-rain font-color"></i>
             </div>
           </div>
           <hr />
@@ -95,7 +96,7 @@
             <div class="col-2">
               Sun
               <br />
-              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
               <br />
               12°
               <br />
@@ -104,7 +105,7 @@
             <div class="col-2">
               Mon
               <br />
-              ⛅️
+              <span class="font-color">⛅️</span>
               <br />
               17°
               <br />
@@ -113,7 +114,7 @@
             <div class="col-2">
               Tue
               <br />
-              ☀️
+              <span class="font-color">☀️</span>
               <br />
               15°
               <br />
@@ -122,7 +123,7 @@
             <div class="col-2">
               Wed
               <br />
-              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
               <br />
               27°
               <br />
@@ -131,7 +132,7 @@
             <div class="col-2">
               Thur
               <br />
-              <i class="fa-solid fa-smog"></i>
+              <i class="fa-solid fa-smog font-color"></i>
               <br />
               18°
               <br />
@@ -140,18 +141,18 @@
             <div class="col-2">
               Fri
               <br />
-              <i class="fa-solid fa-cloud-moon-rain"></i>
+              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
               <br />
               6°
               <br />
               28°
             </div>
           </div>
-          <small>
-            <a href="">Open-source code</a> by Onoh Jennifer Ukamaka
-          </small>
         </div>
       </div>
+    </div>
+    <div class="git-link">
+      <small> <a href="">Open-source code</a> by Onoh Jennifer Ukamaka </small>
     </div>
     <script src="src/app.js"></script>
   </body>
