--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -26,10 +27,12 @@
     <div class="container">
       <div class="app-wrapper">
         <div class="weather-app">
-          <h1>Enugu, Nigeria</h1>
+          <h1 id="city"></h1>
+          ,
+          <span class="country" id="country"></span>
           <ul>
-            <li>Monday 12:00</li>
-            <li>Clear</li>
+            <li>Last updated: <span id="date"></span></li>
+            <li id="description"></li>
           </ul>
           <div class="row first">
             <div class="col-6">
@@ -39,23 +42,23 @@
                 alt="weather icon"
                 width="60px"
               />
-              <span class="temperature">12</span
+              <span class="temperature" id="temperature"></span
               ><span class="units">°C|°F</span>
             </div>
             <div class="col-2">
               Wind
               <br />
-              5km/h
+              <span id="wind"></span> m/s
             </div>
             <div class="col-2">
               Humidity
               <br />
-              73%
+              <span id="humidity"></span> %
             </div>
             <div class="col-2">
-              precipitation
+              Pressure
               <br />
-              0%
+              <span id="pressure"></span> hPa
             </div>
           </div>
           <hr />
