Added icon from openweathermap

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
               <img
                 src="images/weather-icon-png-11067.png"
                 class="weather-icon"
-                alt="weather icon"
+                alt="weather-icon"
                 width="60px"
+                id="icon"
               />
               <span class="temperature" id="temperature"></span
               ><span class="units">°C|°F</span>
