--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
     <div class="container">
       <div class="app-wrapper">
         <div class="weather-app">
+          <form id="search">
+            <div class="row">
+              <div class="col-7">
+                <input
+                  type="search"
+                  placeholder="Enter a city..."
+                  autocomplete="off"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="form-control btn btn-primary"
+                />
+              </div>
+              <div class="col-2">
+                <span id="location"
+                  ><i class="fa-solid fa-location-dot location"></i
+                ></span>
+              </div>
+            </div>
+          </form>
+
           <h1 id="city"></h1>
           ,
           <span class="country" id="country"></span>
