--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="app-wrapper">
         <div class="weather-app">
-          <form id="search">
+          <form id="city-form">
             <div class="row">
               <div class="col-7">
                 <input
@@ -35,6 +35,7 @@
                   placeholder="Enter a city..."
                   autocomplete="off"
                   class="form-control"
+                  id="city-input"
                 />
               </div>
               <div class="col-3">
@@ -42,6 +43,7 @@
                   type="submit"
                   value="Search"
                   class="form-control btn btn-primary"
+                  id=""
                 />
               </div>
               <div class="col-2">
