--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <span id="wind"></span> m/s
             </div>
             <div class="col-2">
-              Humidity
+              HUM
               <br />
               <span id="humidity"></span> %
             </div>
