--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <span id="humidity"></span> %
             </div>
             <div class="col-2">
-              Pressure
+              PRES
               <br />
               <span id="pressure"></span> hPa
             </div>
