Added the units(Celsius & Fahrenheit) conversions  and created functions in JS to call them.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
                 id="icon"
               />
               <span class="temperature" id="temperature"></span
-              ><span class="units">°C|°F</span>
+              ><span class="units">
+                <a href="#" id="cels" class="cels">°C</a>|<a
+                  href="#"
+                  id="fahr"
+                  class="fahr"
+                  >°F</a
+                >
+              </span>
             </div>
             <div class="col-2">
               Wind
@@ -89,38 +96,7 @@
               <span id="pressure"></span> hPa
             </div>
           </div>
-          <hr />
-          Today's forecast
-          <div class="row">
-            <div class="col-3">
-              Morning
-              <br />
-              25°
-              <br />
-              <i class="fa-solid fa-sun font-color"></i>
-            </div>
-            <div class="col-3">
-              Afternoon
-              <br />
-              29°
-              <br />
-              <i class="fa-solid fa-cloud font-color"></i>
-            </div>
-            <div class="col-3">
-              Evening
-              <br />
-              23°
-              <br />
-              <i class="fa-solid fa-cloud-moon font-color"></i>
-            </div>
-            <div class="col-3">
-              Overnight
-              <br />
-              22°
-              <br />
-              <i class="fa-solid fa-cloud-rain font-color"></i>
-            </div>
-          </div>
+
           <hr />
           Daily forecast
           <div class="row">
