--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
       </div>
     </div>
     <div class="git-link">
-      <small> <a href="">Open-source code</a> by Onoh Jennifer Ukamaka </small>
+      <small>
+        <a href="https://github.com/OnohJennifer">Open-source code</a> by Onoh
+        Jennifer Ukamaka
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
