--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@
     </div>
     <div class="git-link">
       <small>
-        <a href="https://github.com/OnohJennifer">Open-source code</a> by Onoh
-        Jennifer Ukamaka
+        <a href="https://github.com/OnohJennifer" target="blank"
+          >Open-source code</a
+        >
+        by Onoh Jennifer Ukamaka
       </small>
     </div>
     <script src="src/app.js"></script>
