--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       src="https://kit.fontawesome.com/f8f59c13bc.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="app-wrapper">
+      <div class="app-wrapper" id="app-wrapper">
         <div class="weather-app">
           <form id="city-form">
             <div class="row">
@@ -47,9 +47,11 @@
                 />
               </div>
               <div class="col-2">
-                <span id="location"
-                  ><i class="fa-solid fa-location-dot location"></i
-                ></span>
+                <button>
+                  <span id="location"
+                    ><i class="fa-solid fa-location-dot location"></i
+                  ></span>
+                </button>
               </div>
             </div>
           </form>
