I changed the daily forecast html, created a function called showForecast in JS,created an array of days and moved the html into the JS function  and array.

--- a/index.html
+++ b/index.html
@@ -100,64 +100,9 @@
           </div>
 
           <hr />
-          Daily forecast
-          <div class="row">
-            <div class="col-2">
-              Sun
-              <br />
-              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
-              <br />
-              12°
-              <br />
-              53°
-            </div>
-            <div class="col-2">
-              Mon
-              <br />
-              <span class="font-color">⛅️</span>
-              <br />
-              17°
-              <br />
-              62°
-            </div>
-            <div class="col-2">
-              Tue
-              <br />
-              <span class="font-color">☀️</span>
-              <br />
-              15°
-              <br />
-              59°
-            </div>
-            <div class="col-2">
-              Wed
-              <br />
-              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
-              <br />
-              27°
-              <br />
-              80°
-            </div>
-            <div class="col-2">
-              Thur
-              <br />
-              <i class="fa-solid fa-smog font-color"></i>
-              <br />
-              18°
-              <br />
-              64°
-            </div>
-            <div class="col-2">
-              Fri
-              <br />
-              <i class="fa-solid fa-cloud-moon-rain font-color"></i>
-              <br />
-              6°
-              <br />
-              28°
-            </div>
-          </div>
-        </div>
+          <div class="weather-forecast" id="forecast">
+            
+          </div>     
       </div>
     </div>
     <div class="git-link">
