Updated the CSS of the weather app

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
           </div>
 
           <hr />
-          <div class="weather-forecast" id="forecast">
+          <span class="daily-forecast">Daily Forecast</span>
+          <div class="weather-forecast" id="forecast"> 
             
           </div>     
       </div>
