--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="weather-app">
           <form id="city-form">
             <div class="row">
-              <div class="col-7">
+              <div class="col-sm-7">
                 <input
                   type="search"
                   placeholder="Enter a city..."
@@ -38,7 +38,7 @@
                   id="city-input"
                 />
               </div>
-              <div class="col-3">
+              <div class="col-sm-3">
                 <input
                   type="submit"
                   value="Search"
@@ -46,7 +46,7 @@
                   id=""
                 />
               </div>
-              <div class="col-2">
+              <div class="col-sm-2">
                 <button>
                   <span id="location"
                     ><i class="fa-solid fa-location-dot location"></i
@@ -64,7 +64,7 @@
             <li id="description"></li>
           </ul>
           <div class="row first">
-            <div class="col-6">
+            <div class="col-sm-6">
               <img
                 src="images/weather-icon-png-11067.png"
                 class="weather-icon"
@@ -82,17 +82,17 @@
                 >
               </span>
             </div>
-            <div class="col-2">
+            <div class="col-sm-2">
               Wind
               <br />
               <span id="wind"></span> m/s
             </div>
-            <div class="col-2">
+            <div class="col-sm-2">
               HUM
               <br />
               <span id="humidity"></span> %
             </div>
-            <div class="col-2">
+            <div class="col-sm-2">
               PRES
               <br />
               <span id="pressure"></span> hPa
